--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "i": "^0.3.7",
     "jest": "^29.5.0",
+    "npm": "^10.9.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
